--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,25 @@
-groq==0.12.0
-python-opencv
-python-dotenv
+attr==0.3.2
+colorama==0.4.6
+ConfigParser==7.1.0
+cryptography==3.4.8
+docutils==0.21.2
+fastapi==0.115.6
+filelock==3.16.1
+groq==0.13.0
+HTMLParser==0.0.2
+ipython==8.12.3
+ipywidgets==8.1.5
+jnius==1.1.0
+keyring==23.5.0
+Pillow==11.0.0
+protobuf==5.29.1
+pydantic==2.10.3
+pyOpenSSL==24.3.0
+redis==5.2.1
 reportlab==4.2.5
+routes==2.5.1
+Sphinx==8.1.3
+thread==2.0.5
+urllib3_secure_extra==0.1.0
+uvicorn==0.32.1
+xmlrpclib==1.0.1
