--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /dist
 **/node_modules
 **/__pycache__
+**/myenv
 0
 
 # Keys
@@ -42,6 +43,7 @@ logs
 # Env files
 /env
 *.env
+**/env
 
 # Ignore build output
 build
